gl31-master/src/test/deca/syntax/valid/sansobjet/ifelse_program.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    boolean b = true;
    boolean c = false;

    if(b == true && c == true){
        print("maybe");
    }
    else if(b == true){
        print(b);
    }
    else{
        print("no");
    }
}
