gl31-master/src/test/deca/syntax/invalid/sansobjet/ifelse_condition2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 15 : Erreur, condition manquante
//
// Historique:
//    cree le 18/01/2021
{
    boolean b;

    if(b == true){
        print(b);
    }
    else if{
        print("yes");
    }
    else{
        print("no");
    }
}
